k8s/gke/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dota2-cast-assist-deployment
spec:
  template:
    spec:
      serviceAccountName: ksa-scrapingmartians-prod
