k8s/gke/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dota2-cast-assist-service
spec:
  type: LoadBalancer  # GKE LoadBalancer
