k8s/gke/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dota2-cast-assist-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: back-scratcher-dedicated-network-global-lb-static-ip
    networking.gke.io/pre-shared-cert: back-scratcher-ssl
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: dota2-cast-assist-app
spec:
  rules:
    - host: back-scratcher.scrapingmartians.com
      http:
        paths:
          - path: /dota2-gsi
            pathType: Prefix
            backend:
              service:
                name: dota2-cast-assist-service
                port:
                  number: 8082
